--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "not truly, but it is single thread in the sense that it has only one thread per process.",
   "main": "threads.js",
   "scripts": {
-    "start": "set UV_THREADPOOL_SIZE=5 && node threads.js"
+    "start:threads": "set UV_THREADPOOL_SIZE=5 && node threads.js",
+    "start:async": "node async.js"
   },
   "keywords": [],
   "author": "",
