--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
     "start:threads": "set UV_THREADPOOL_SIZE=5 && node threads.js",
     "start:async": "node async.js",
     "start:multitask": "set UV_THREADPOOL_SIZE=5 && node multitask.js",
-    "start:dev": "node index.js"
+    "start:dev": "set UV_THREADPOOL_SIZE=1 &&node index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "loadtest": "^8.0.6"
+    "loadtest": "^8.0.6",
+    "pm2": "^5.3.0"
   }
 }
